<resources>
    <string name="app_name">ChoreManager2</string>
    <string name="Shopping">Shopping</string>
    <string name="Tasks">Tasks</string>
    <string name="People">People</string>
    <string name="Other">Other</string>

    <string-array name="drop_list">
        <item>Complete</item>
        <item>Postponed</item>
        <item>Incomplete</item>
    </string-array>

    <string name="listPrompt">Choose Status</string>
    <string name="title_activity_people">PeopleActivity</string>
    <string name="person_name">John Doe</string>
    <string name="person_allocated_tasks">Allocate Tasks: 1</string>
    <string name="person_next_task">Go shopping</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string name="save_person">SAVE</string>
    <string name="name_hint">Name</string>
    <string name="TaskName">Task Name:</string>
    <string name="EnterDesc">Enter a description...</string>
    <string name="EnterNote">Note:</string>
    <string name="RequireEquipment">Require Equipment:</string>
    <string name="res_prompt">Resources</string>
    <string name="not_assigned">Not assigned</string>
    <string name="new_task">ADD NEW TASK</string>
    <string name="Resource">Resources</string>
</resources>
