<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.beajo.choremanager2.views.ActivityChoreList">

    <LinearLayout
        android:id="@+id/tabView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <Button
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="resourceButtonClick"
            android:text="@string/Resource"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/shopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="shoppingButtonClick"
            android:text="@string/Shopping"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Tasks"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:onClick="peopleButtonClick"
            android:text="@string/People"
            android:textColor="#ffffff" />
    </LinearLayout>

    <Button
        android:id="@+id/newTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginRight="1dp"
        android:background="@color/colorAccent"
        android:onClick="newTaskButtonClick"
        android:text="@string/new_task"
        android:textColor="@android:color/white" />

    <ListView
        android:id="@+id/taskList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants" />


</LinearLayout>
