<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.beajo.choremanager2.views.PeopleActivity"
    tools:showIn="@layout/activity_people">

    <LinearLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="otherButtonClick"
            android:text="@string/Other"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/shopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="shoppingButtonClick"
            android:text="@string/Shopping"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="tasksButtonClick"
            android:text="@string/Tasks"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/People"
            android:textColor="#ffffff" />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tab_layout" />
</RelativeLayout>
