<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/personImage"
        android:layout_width="40dp"
        android:layout_height="80dp"
        android:layout_margin="2dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/female" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/personName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:text="@string/person_name" />

        <TextView
            android:id="@+id/personAllocatedTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/person_allocated_tasks"
            android:textSize="18sp"
            tools:text="@string/person_allocated_tasks" />

        <TextView
            android:id="@+id/personNextTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/person_next_task"
            android:textSize="18sp"
            tools:text="@string/person_next_task" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:backgroundTint="@android:color/transparent"
        app:srcCompat="@drawable/ic_action_more" />
</LinearLayout>